Fix layout issues at Age header

--- a/src/components/atoms/_image.scss
+++ b/src/components/atoms/_image.scss
@@ -20,6 +20,6 @@
   }
   &--age {
     height: 90%;
-    max-height: 182px;
+    max-height: 145px;
   }
 }
